--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div id="overview">
         <div id="main">
-            <movie-list></movie-list>
-            <movie-filter></movie-filter>
+            <movie-list :genre="genre" :time="time" :movies="movies" :day="day"></movie-list>
+            <movie-filter v-on:check-filter-event="checkFilterHandler"></movie-filter>
         </div>
     </div>
 </div>
