--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="overview">
         <div id="main">
             <movie-list :genre="genre" :time="time" :movies="movies" :day="day"></movie-list>
-            <movie-filter v-on:check-filter-event="checkFilterHandler"></movie-filter>
+            <movie-filter></movie-filter>
         </div>
     </div>
 </div>
